# algo4life

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
notebooks/: bandits.ipynb  cache.ipynb  optimal_stopping.ipynb  sorting.ipynb
src/: lib.rs  main.rs  secretary.rs  sorting.rs
