[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "algo4life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "maturin>=1.10.2",
    "numpy>=2.4.0",
    "optimizers",
    "torch>=2.9.1",
]

[tool.uv.workspace]
members = [
    "optimizers",
]

[tool.uv.sources]
optimizers = { workspace = true }
